--- a/basic_routines/graph/undirected_graph_adjacency_matrix/undirected_graph_adjacency_matrix.cbp
+++ b/basic_routines/graph/undirected_graph_adjacency_matrix/undirected_graph_adjacency_matrix.cbp
@@ -2,28 +2,26 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="graph_adjacency_matrix" />
+		<Option title="undirected_graph_adjacency_matrix" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/graph_adjacency_matrix" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/undirected_graph_adjacency_matrix" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/graph_adjacency_matrix" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/undirected_graph_adjacency_matrix" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -34,8 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="GraphAdjMatrix.cpp" />
-		<Unit filename="GraphAdjMatrix.h" />
+		<Unit filename="UndirectedGraphAdjMatrix.cpp" />
+		<Unit filename="UndirectedGraphAdjMatrix.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
