--- a/basic_routines/graph/directed_graph_adjacency_matrix/directed_graph_adjacency_matrix.cbp
+++ b/basic_routines/graph/directed_graph_adjacency_matrix/directed_graph_adjacency_matrix.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="DirectedGraphAdjMatrix.cpp" />
+		<Unit filename="DirectedGraphAdjMatrix.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
