--- a/basic_routines/misc/8.prefix_tree/8.prefix_tree.cbp
+++ b/basic_routines/misc/8.prefix_tree/8.prefix_tree.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/8.prefix_tree" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/8" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/8.prefix_tree" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/8" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="PrefixTree.cpp" />
+		<Unit filename="PrefixTree.h" />
 		<Unit filename="main.cpp" />
 		<Extensions />
 	</Project>
