--- a/basic_routines/misc/16.recursion/16.recursion.cbp
+++ b/basic_routines/misc/16.recursion/16.recursion.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/16.recursion" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/16" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/16.recursion" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/16" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -37,6 +37,8 @@
 		<Unit filename="main.cpp" />
 		<Unit filename="printStack.cpp" />
 		<Unit filename="printStack.h" />
+		<Unit filename="printSubSequence.cpp" />
+		<Unit filename="printSubSequence.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
