--- a/basic_routines/15.graph/15.graph.vcxproj.filters
+++ b/basic_routines/15.graph/15.graph.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="heap.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graph.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="heap.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
